--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Page Title</title>
+</head>
+
+<body>
+
+    <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
+
+</body>
+
+<!-- jQuery -->
+<script src="js/jquery-3.7.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+        
+    });
+</script>
+
+</html>
