--- a/index.html
+++ b/index.html
@@ -2,22 +2,36 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>iria1's website</title>
+    <link rel="icon" href="./yuuka.jpg">
 </head>
 
 <body>
+    <h1>Hello there</h1>
+    <p>If you are seeing this, this site is in construction</p>
+    <p>There is nothing interesting to see here, so go away</p>
 
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-
+    <label>Get a corpo buzzword:</label>
+    <button onclick="Foo()">Get</button>
+    <h4 id="buzzword"></h4>
 </body>
 
 <!-- jQuery -->
 <script src="js/jquery-3.7.1.min.js"></script>
 <script>
-    $(document).ready(function(){
+    $(document).ready(function () {
         
     });
+
+    function Foo(){
+        $.ajax({
+            type: "GET",
+            url: "https://corporatebs-generator.sameerkumar.website/",
+            success: function (json) {
+                $("#buzzword").html(json.phrase);
+            }
+        });
+    }
 </script>
 
 </html>
