--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon" href="./yuuka.jpg">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <div style="padding-bottom:56px">
+        <nav class="navbar fixed-top navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div class="navbar-text">iria1.github.io</div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
     <div class="container pt-5">
         <div class="row">
             <div class="col-sm-6 col-md-4 border">
@@ -95,8 +108,11 @@
 </body>
 
 <!-- jQuery -->
-<script src="js/jquery-3.7.1.min.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 <script>
     $(document).ready(function () {
 
