--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- <link rel="icon" href="./yuuka.jpg"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,7 +17,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="navbar-brand" href="#">
-                        <!-- <img src="./yuuka.jpg" alt="Avatar Logo" style="width:40px;" class="rounded-pill"> -->
+
                     </a>
                 </li>
                 <li class="nav-item">
@@ -28,131 +27,7 @@
         </div>
     </nav>
 
-    <div class="container pt-5">
-        <div class="row">
-            <div class="col-sm-6 col-md-4 border">
-                <h1>Hello there</h1>
-            </div>
-            <div class="col-sm-6 col-md-4 border text-bg-primary">
-                <p class="text-center">If you are seeing this, this site is in construction</p>
-            </div>
-            <div class="col-sm-6 col-md-4 border text-bg-success">
-                <p class="text-end">There is nothing interesting to see here, so go away</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col border">
-                <label>Get a corpo buzzword:</label>
-                <button type="button" class="btn btn-secondary" onclick="Foo()">Get</button>
-                <h4 id="buzzword"></h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6 border">
-                <table class="table table-sm">
-                    <thead>
-                        <tr>
-                            <th>Head 1</th>
-                            <th>Head 2</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Body 1</td>
-                            <td>Body 2</td>
-                        </tr>
-                        <tr>
-                            <td>Body 3</td>
-                            <td>Body 4</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td>Foot 1</td>
-                            <td>Foot 2</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-            <div class="col-sm-6 border">
-                <table class="table table-striped table-hover table-dark">
-                    <thead>
-                        <tr>
-                            <th>Head 1</th>
-                            <th>Head 2</th>
-                        </tr>
-                    </thead>
-                    <tbody class="table-light">
-                        <tr>
-                            <td>Body 1</td>
-                            <td>Body 2</td>
-                        </tr>
-                        <tr>
-                            <td>Body 3</td>
-                            <td>Body 4</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td>Foot 1</td>
-                            <td>Foot 2</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div>
-        </div>
-        <div class="row border" style="height:200px">
-            <div id="sample_carousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#sample_carousel" data-bs-slide-to="0"
-                        class="active"></button>
-                    <button type="button" data-bs-target="#sample_carousel" data-bs-slide-to="1"></button>
-                    <button type="button" data-bs-target="#sample_carousel" data-bs-slide-to="2"></button>
-                </div>
-
-                <div class="carousel-inner h-100">
-                    <div class="carousel-item text-bg-secondary h-100 active">
-                        <div class="carousel-caption">
-                            carousel 1
-                        </div>
-                    </div>
-                    <div class="carousel-item text-bg-secondary h-100">
-                        <div class="carousel-caption">
-                            carousel 2
-                        </div>
-                    </div>
-                    <div class="carousel-item text-bg-secondary h-100">
-                        <div class="carousel-caption">
-                            carousel 3
-                        </div>
-                    </div>
-                </div>
-
-                <button class="carousel-control-prev" type="button" data-bs-target="#sample_carousel"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#sample_carousel"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </button>
-            </div>
-        </div>
-        <div class="row">
-            <div id="alert" class="alert alert-success alert-dismissible fade show" style="display:none">
-                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                Success!
-            </div>
-        </div>
-        <div class="row border" style="height:1000px">
-            <div>
-                <button type="button" class="btn btn-primary float-end" data-bs-toggle="offcanvas" data-bs-target="#sample_offcanvas">
-                    Call Offcanvas
-                </button>
-            </div>
-
-        </div>
-    </div>
+    <h4 id="endpoint_check"></h4>
 
     <div style="padding-top:112px">
         <nav class="navbar fixed-bottom navbar-expand-sm bg-dark navbar-dark">
@@ -188,16 +63,6 @@
             </div>
         </div>
     </div>
-
-    <div class="offcanvas offcanvas-end" id="sample_offcanvas">
-        <div class="offcanvas-header">
-            <h1 class="offcanvas-title">Offcanvas</h1>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
-        </div>
-        <div class="offcanvas-body">
-            <p>This offcanvas does nothing.</p>
-        </div>
-    </div>
 </body>
 
 <!-- jQuery -->
@@ -213,15 +78,19 @@
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
+
+        Foo();
     });
 
     function Foo() {
         $.ajax({
             type: "GET",
-            url: "https://corporatebs-generator.sameerkumar.website/",
+            url: "http://localhost:5000/api/Check/CheckEndpointExists",
             success: function (json) {
-                $("#buzzword").html(json.phrase);
-                $("#alert").attr('style', 'display:block');
+                $("#endpoint_check").html("the endpoint is accessible");
+            },
+            error: function (xhr) {
+                $("#endpoint_check").html("the endpoint is NOT accessible");
             }
         });
     }
