--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     function Foo() {
         $.ajax({
             type: "GET",
-            url: "http://localhost:5000/api/Check/CheckEndpointExists",
+            url: "https://kit-primary-whippet.ngrok-free.app/api/Check/CheckEndpointExists",
             success: function (json) {
                 $("#endpoint_check").html("the endpoint is accessible");
             },
