--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
         $.ajax({
             type: "GET",
             url: "https://kit-primary-whippet.ngrok-free.app/api/Check/CheckEndpointExists",
-            headers: [
-                {"ngrok-skip-browser-warning": true}
-            ],
+            headers: {"ngrok-skip-browser-warning": "1"},
             success: function (json) {
                 $("#endpoint_check").html("the endpoint is accessible");
             },
