--- a/index.html
+++ b/index.html
@@ -12,57 +12,11 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="navbar-brand" href="#">
-
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <div class="navbar-text">iria1.github.io</div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div id="header"></div>
 
     <h4 id="endpoint_check"></h4>
 
-    <div style="padding-top:112px">
-        <nav class="navbar fixed-bottom navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <div class="navbar-text" data-bs-toggle="tooltip" title="Contact Me">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#contact_me_modal">
-                                Made by Irfandi Riawan
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
-    <div class="modal fade" id="contact_me_modal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Contact Me</h4>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-
-                <div class="modal-body">
-                    It's not ready yet!
-                </div>
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="footer"></div>
 </body>
 
 <!-- jQuery -->
@@ -71,6 +25,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+<script src="headfoot.js"></script>
 <script>
     $(document).ready(function () {
         // Initialize tooltips
@@ -86,7 +41,9 @@
         $.ajax({
             type: "GET",
             url: "https://kit-primary-whippet.ngrok-free.app/api/Check/CheckEndpointExists",
-            headers: {"ngrok-skip-browser-warning": "1"},
+            headers: {
+                "ngrok-skip-browser-warning": "1"
+            },
             success: function (json) {
                 $("#endpoint_check").html("the endpoint is accessible");
             },
